# ardupilot

./: CMakeLists.txt
ArduCopter/: Copter.h  wscript
libraries/AC_SPL_Motor_Ctrl/: AC_SPL_Motor_Ctrl.cpp  AC_SPL_Motor_Ctrl.h
libraries/AP_Motors/: AP_MotorsCoax.cpp  AP_MotorsCoax.h
